--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -5,12 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="20dp"
     tools:context=".activity.OrderActivity">
 
+    <FrameLayout
+        android:id="@+id/frame_layout"
+        android:layout_width="47dp"
+        android:layout_height="47dp"
+        android:background="@drawable/background_icon">
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center"
+            android:src="@drawable/eva_arrow_ios_back_fill" />
+    </FrameLayout>
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="22dp">
 
         <TextView
             android:id="@+id/textView"
@@ -56,7 +69,7 @@
             android:textSize="13sp" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/tvDetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/tvTotal"
@@ -69,5 +82,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvOrderDetails"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:paddingHorizontal="22dp"/>
 </LinearLayout>
