--- a/app/src/main/res/drawable/bg_orderdetail.xml
+++ b/app/src/main/res/drawable/bg_orderdetail.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="10dp"/>
-    <solid android:color="@color/white"/>
-    <stroke android:color="#84C453" android:width="1.2dp"/>
+
+    <stroke android:color="@color/black" android:width="2dp"/>
 </shape>
