--- a/app/src/main/res/layout/layout_item_product.xml
+++ b/app/src/main/res/layout/layout_item_product.xml
@@ -6,10 +6,11 @@
 
     <ImageView
         android:id="@+id/imgProduct"
-        android:layout_width="122dp"
+        android:layout_width="142dp"
         android:layout_height="92dp"
         android:src="@drawable/laptop"
         android:layout_centerHorizontal="true"
+        android:scaleType="centerCrop"
         android:layout_marginTop="8dp"/>
 
     <TextView
@@ -19,10 +20,11 @@
         android:layout_below="@id/imgProduct"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="4dp"
-        android:gravity="center"
+        android:layout_alignParentStart="true"
         android:textSize="14sp"
+        android:layout_marginStart="4dp"
         android:fontFamily="@font/inter_semibold"
-        android:textColor="#343A40"
+        android:textColor="#CCE1F4"
         android:text="Ordinary Burgers" />
 
     <TextView
@@ -34,6 +36,8 @@
         android:layout_marginTop="4dp"
         android:fontFamily="@font/inter_bold"
         android:textSize="14sp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="4dp"
         android:textColor="@color/price"
         android:text="20000000" />
 </RelativeLayout>
