--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="background_1">#FFFFFF</color>
-    <color name="price">#FE8C00</color>
+    <color name="price">#192046</color>
 </resources>
