--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,7 +25,7 @@
     <SearchView
         android:id="@+id/search_home"
         android:layout_width="320dp"
-        android:layout_height="46dp"
+        android:layout_height="48dp"
         android:background="#F2F2F2"
         android:focusable="true"
         android:clickable="true" >
@@ -34,8 +34,8 @@
 
     <ImageView
         android:id="@+id/imgCart"
-        android:layout_width="46dp"
-        android:layout_height="46dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_alignParentEnd="true"
         android:src="@drawable/cart_icon" />
 
@@ -61,7 +61,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:textSize="16sp"
+                android:textSize="20sp"
                 android:textColor="#343A40"
                 android:textStyle="italic"
                 android:layout_below="@id/viewPager"
@@ -85,6 +85,8 @@
                 android:layout_height="wrap_content"
                 android:textColor="#343A40"
                 android:textStyle="italic"
+                android:layout_marginTop="16dp"
+                android:textSize="20sp"
                 android:layout_below="@id/view1"
                 android:text="@string/phoneCharge" />
 
@@ -105,6 +107,8 @@
                 android:layout_height="wrap_content"
                 android:textColor="#343A40"
                 android:textStyle="italic"
+                android:layout_marginTop="16dp"
+                android:textSize="20sp"
                 android:layout_below="@id/view2"
                 android:text="@string/telephone" />
 
@@ -126,6 +130,8 @@
                 android:text="@string/ipad"
                 android:layout_below="@+id/view3"
                 android:textColor="#343A40"
+                android:layout_marginTop="16dp"
+                android:textSize="20sp"
                 android:textStyle="italic"/>
 
             <androidx.recyclerview.widget.RecyclerView
