--- a/app/src/main/res/layout/layout_item_product.xml
+++ b/app/src/main/res/layout/layout_item_product.xml
@@ -11,20 +11,20 @@
         android:src="@drawable/laptop"
         android:layout_centerHorizontal="true"
         android:scaleType="centerCrop"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="12dp"/>
 
     <TextView
         android:id="@+id/tvProductName"
-        android:layout_width="120dp"
+        android:layout_width="130dp"
         android:layout_height="20dp"
         android:layout_below="@id/imgProduct"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="4dp"
-        android:layout_alignParentStart="true"
-        android:textSize="14sp"
+        android:layout_marginTop="10dp"
+        android:textSize="13sp"
         android:layout_marginStart="4dp"
         android:fontFamily="@font/inter_semibold"
-        android:textColor="#CCE1F4"
+        android:textColor="#162A95"
+        android:gravity="center"
         android:text="Ordinary Burgers" />
 
     <TextView
@@ -33,11 +33,11 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/tvProductName"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="6dp"
         android:fontFamily="@font/inter_bold"
-        android:textSize="14sp"
-        android:layout_alignParentStart="true"
+        android:textSize="15sp"
+        android:gravity="center"
         android:layout_marginStart="4dp"
-        android:textColor="@color/price"
+        android:textColor="#A52323"
         android:text="20000000" />
 </RelativeLayout>
